Fix items whitespace

--- a/public/stylesheets/sass/shop_list.sass
+++ b/public/stylesheets/sass/shop_list.sass
@@ -258,6 +258,7 @@ body
         line-height: 2.5em
         vertical-align: middle
         text-align: center
+        white-space: nowrap
 
       .itemQuantity
         position: relative
